use App.jsx as datacenter to avoid using this.setState() too much

--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -252,6 +252,7 @@ body {
     border: none;
     border-radius: 4px;
     color: #242424;
+    background-color: rgb(240, 240, 240);
     outline: none;
   }
 
@@ -277,7 +278,7 @@ body {
     position: absolute;
     top: 0px;
     left: 0px;
-    width: 400px;
+    width: 640px;
     height: auto;
     padding: 14px 20px;
     background-color: #FFF;
@@ -294,10 +295,7 @@ body {
 
 }
 
-/* -- CMS: Entries Page ------------------------------------------------------ */
-
-.entries{
-
+.page-content{
   position: absolute;
   top: 100px;
   width: 100%;
@@ -305,6 +303,11 @@ body {
   background-color: #FFF;
   padding: 20px;
   border-radius: 3px;
+}
+
+/* -- CMS: Entries Page ------------------------------------------------------ */
+
+.entries{
 
   header{
     display: none;
@@ -342,6 +345,20 @@ body {
   .class-nickname{
     position: absolute;
     left: 110px;
+  }
+
+}
+
+.entry-detail{
+
+  header{
+    display: none;
+  }
+
+  p{
+    font-size: 1em;
+    font-family: Helvetica, Arial, Times;
+    line-height: 24pt;
   }
 
 }
